@@ -66,7 +66,7 @@ class VirtualMotor(Motor, HasOffset):
 
     def doWait(self):
         while self.curstatus[0] == status.BUSY:
-            time.sleep(0.5)
+            time.sleep(0.1)
 
     def doStop(self):
         self._stop = True
